--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "material-ui-phone-number": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.6",
     "rsuite": "^5.0.2",
     "sweetalert2": "^11.1.9",
     "web-vitals": "^1.0.1"
